refactor(jpa): 优化代码健壮性并移除H2数据库支持
- 修改AuditEntityListener中应用上下文访问方式，增强线程安全性
- 为CreatedAt/UpdatedAt字段验证添加异常处理，跳过无效字段而非中断程序
- 移除H2Dialect相关代码，精简数据库方言支持范围
- 重构加密转换器的密钥刷新逻辑，添加同步保护机制
- 优化实体类解析器的缓存实现，提升性能表现
- 更新IN子句构建器以支持NULL值处理
- 调整测试配置中的事务传播设置，确保测试数据隔离
- 修正批量操作模板中的常量命名规范
- 改进代码生成器的表名校验规则，加强安全防护
- 调整实体字段提取器的缓存策略，提高内存效率
- 完善方言检测器的日志提示信息，明确支持的数据库类型